--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <iframe width="1920" height="1080"
-  src="https://www.youtube.com/embed/live_stream?channel=YOUR_CHANNEL_ID&autoplay=1"
-  frameborder="0" allow="autoplay; fullscreen">
+  src="https://www.youtube.com/embed/cFDKslME0L8?autoplay=1&mute=1&playsinline=1&controls=0&rel=0"
+  frameborder="0"
+  allow="autoplay; fullscreen"
+  allowfullscreen>
 </iframe>
