--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <iframe width="1920" height="1080"
-  src="https://www.youtube.com/embed/cFDKslME0L8?autoplay=1&mute=1&playsinline=1&controls=0&rel=0"
+  src="https://www.youtube.com/embed/cFDKslME0L8?autoplay=1&mute=1&playsinline=1&controls=0&rel=0&vq=hd1080"
   frameborder="0"
   allow="autoplay; fullscreen"
   allowfullscreen>
