--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<iframe width="1920" height="1080"
-  src="https://www.youtube.com/embed/cFDKslME0L8?autoplay=1&mute=1&playsinline=1&controls=0&rel=0&vq=hd1080"
-  frameborder="0"
+<style>
+  html, body { margin:0; padding:0; height:100%; width:100%; background:#000; }
+  iframe { border:0; width:100%; height:100%; }
+</style>
+
+<iframe
+  src="https://www.youtube-nocookie.com/embed/cFDKslME0L8?autoplay=1&mute=1&playsinline=1&controls=0&rel=0&vq=hd1080"
   allow="autoplay; fullscreen"
   allowfullscreen>
 </iframe>
